2009-10-26  Nate Chapin  <japhet@chromium.org>

Reviewed by Alexey Proskuryakov.

        Update no-referrer-reset for https://bugs.webkit.org/show_bug.cgi?id=30781.

        * http/tests/navigation/no-referrer-reset-expected.txt: Expect window.opener to still be set.
        * http/tests/navigation/no-referrer-reset.html: Update text to reflect what the test actually does.
2009-10-26  Nate Chapin  <japhet@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Don't set window.opener to 0 for the current FrameLoader if a noreferrer link was clicked, only suppress opener in a new frame.
        https://bugs.webkit.org/show_bug.cgi?id=30781

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::urlSelected): Don't suppress opener in the current frame for noreferrer navigations.

Canonical link: https://commits.webkit.org/41538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50092 268f45cc-cd09-0410-ab3c-d52691b4dbfc